package com.dare.cinema_booking_system.movie.entity;

public enum Genre {
	ACTION,
	COMEDY,
	FANTASY,
	MYSTERY,
	SCIENCE_FICTION,
	DRAMA
}
