package com.dare.cinema_booking_system.movie.entity;

import com.dare.cinema_booking_system.screenings.entity.ScreeningEntity;
import jakarta.persistence.*;
import lombok.Getter;
import lombok.NoArgsConstructor;
import lombok.Setter;

import java.util.ArrayList;
import java.util.List;

@Getter
@Setter
@NoArgsConstructor
@Entity
@Table(name = "movies")
public class MovieEntity {

	@Id
	@GeneratedValue(strategy = GenerationType.IDENTITY)
	private Long id;

	@Column(name = "title", nullable = false)
	private String title;

	@Column(name = "description", nullable = false)
	private String description;

	@Enumerated(EnumType.STRING)
	@Column(name = "genre", nullable = false)
	private Genre genre;

	@Column(name = "duration", nullable = false)
	private int duration;

	@OneToMany(mappedBy = "movie", cascade = CascadeType.ALL)
	private List<ScreeningEntity> screeningsEntities;


	public MovieEntity(String title, String description, Genre genre, int duration) {
		this.title = title;
		this.description = description;
		this.genre = genre;
		this.duration = duration;
		this.screeningsEntities = new ArrayList<>();
	}
}
