package com.dare.cinema_booking_system.reservations.entity;

public class ReservationEntity {
}
