package com.dare.cinema_booking_system.rooms.entity;

public class CinemaRoomEntity {
}
